[FEAT] Add delete comment api
